fix pull request
Signed-off-by: Laurent ARNAL <laurent@clae.net>