@@ -162,7 +162,7 @@ public class EnedisHttpApi {
         if (!connected) {
             initialize();
         }
-        String data = getData(String.format("%s/%s/cache", CONTRACT_URL, config.prmId));
+        String data = getData("%s/%s/cache".formatted(CONTRACT_URL, config.prmId));
         if (data.isEmpty()) {
             throw new LinkyException("Requesting '%s' returned an empty response", CONTRACT_URL);
         }
@@ -182,7 +182,7 @@ public class EnedisHttpApi {
         if (!connected) {
             initialize();
         }
-        String data = getData(String.format("%s/%s/cache", ADDRESS_URL, config.prmId));
+        String data = getData("%s/%s/cache".formatted(ADDRESS_URL, config.prmId));
         if (data.isEmpty()) {
             throw new LinkyException("Requesting '%s' returned an empty response", ADDRESS_URL);
         }
@@ -202,7 +202,7 @@ public class EnedisHttpApi {
         if (!connected) {
             initialize();
         }
-        String data = getData(String.format("%s/%s/cache", IDENTITY_URL, config.prmId));
+        String data = getData("%s/%s/cache".formatted(IDENTITY_URL, config.prmId));
         if (data.isEmpty()) {
             throw new LinkyException("Requesting '%s' returned an empty response", IDENTITY_URL);
         }
@@ -222,7 +222,8 @@ public class EnedisHttpApi {
         if (!connected) {
             initialize();
         }
-        String data = getData(String.format("%s/%s/cache", CONTACT_URL, config.prmId));
+        String data = getData("%s/%s/cache".formatted(CONTACT_URL, config.prmId));
+
         if (data.isEmpty()) {
             throw new LinkyException("Requesting '%s' returned an empty response", CONTACT_URL);
         }
